# send-email-notification

./: Dockerfile  README.md  action.yml  pyproject.toml  send-email.py
.github/workflows/: build-image._yml  lint.yml  python-checks.yml  self-test.yml
test/: test.py  test_list.py
