[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 130

[tool.black]
line-length = 130

[tool.isort]
profile = "black"

[tool.coverage.report]
include = ["sendemail.py"]
show_missing = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
source = ["src"]
